# NEXUS

./: .clangd  .gitmodules  ARBDException.h  ARBDLogger.h  CMakeLists.txt  CMakePresets.json  Constants.h  Header.h  SignalManager.cpp  SignalManager.h  SimManager.cpp  SimManager.h  SimSystem.h  Third_PARTY_NOTICE  arbd.cpp  gitmod.bak  macsycl.clangd  metal.clangd  omp_jacobi_demo  omp_jacobi_demo.cpp  optimized_omp_jacobi  optimized_omp_jacobi.cpp  readme.md  sycl.clangd  sycl_acpp.clangd  tbgl_cuda.clangd  tbgl_sycl.clangd  test_sycl_omp_simple
.cursor/rules/: backend-implementation.mdc  project-config.mdc
Backend/: Buffer.h  CMakeLists.txt  Collective.h  Events.h  KernelConfig.h  Kernels.h  MPIManager.cpp  MPIManager.h  Pool.h  Profiler.h  Readme.md  Resource.cpp  Resource.h
Backend/CUDA/: CUDABuffer.h  CUDAManager.cpp  CUDAManager.h  CUDAStreamPool.h  CUDAStreams.h  KernelHelper.cu  KernelHelper.cuh  MemoryKernels.cuh  NCCLManager.cpp  NCCLManager.h
Backend/Legacy/: CUDAManager.cpp  Resource.cpp  Resource.h.bak  SYCLManager.cpp  SYCLManager.h
Backend/METAL/: METALBuffer.h  METALKernels.h  METALManager.cpp  METALManager.h
Backend/SYCL/: ONECCLManager.cpp  ONECCLManager.h  SYCLBuffer.h  SYCLKernels.h  SYCLManager.cpp  SYCLManager.h  SYCLQueuePool.h  SYCLQueues.h
Jacobi/: .nfs0000003c001fee4f00000f3b
Tests/: CMakeLists.txt  DeviceMemoryUtils.h  DeviceRadixSortKernels.h  DeviceRadixSortSYCL.cpp  DeviceRadixSortUSM.cpp  DeviceRadixSortUSM.h  DeviceRadixSortUSMdebug.cpp  Jacobi.cpp  JacobiKernels.h  JacobiKernels_inst.cu  Jacobi_mpi.cpp  Kernel_for_random.cu  Kernel_for_random.h  Kernel_for_random_sycl.cpp  Kernels_inst.cu  Random.cpp  ReductionKernels.h  SimpleRadixSort.h  SimpleRadixSort_debug.cpp  async_buffer_tests.cpp  backend_tests.cpp  catch_boiler.h  cubsort.cu  cuda_omp_manager_test.cpp  cuda_omp_multi_gpu_kernels.cu  cuda_omp_multi_gpu_kernels.h  cuda_omp_multi_gpu_test.cpp  kernels.cpp  kernels_cuda.cu  mpi_gpu_standalone_test.cpp  mpi_multi_gpu_test.cpp  mpitest.cpp  omp_multi_gpu_test.cpp  pinned_unified_tests.cpp  production_buffer_tests.cpp  raw_mpi_test.cpp  simple_mpi_test.cpp  simple_multi_gpu_test.cpp  single_mpi_test.cpp  sycl_mpi_comprehensive_test.cpp  (+8 more)
Tests/Random/: Random.cu  Random.h  Random.metal  RandomKernels.h  base_state.h  philox.h  philox_metal.h  util.h
test_unit/: BaseGrid_tests.cpp  CMakeLists.txt  Jacobi.cu  Readme.md  backend_tests.cpp  catch_boiler.h  kernels.cpp  parse_config.cpp  simple_main.cpp
test_unit/Backends/: cuda_backend.cpp  metal_backend.cpp  metal_events.cpp  sycl_manager.cpp  sycl_omp.cpp
test_unit/Buffer/: Buffer.cpp  Pinned_Unified.cpp  async_buffer_tests.cpp  buffer_test.cpp  generic_Buffer.cpp
test_unit/Kernels/: cuda_kernels.cuh  metal_kernels.cpp  metal_matmul.cpp  sycl_kernels.cpp
test_unit_old/: kernels.cpp
test_unit_old/Buffer/: Buffer.cpp  Pinned_Unified.cpp  async_buffer_tests.cpp
test_unit_old/Kernels/: cuda_kernels.cpp  cuda_kernels.cu  matmul.metal  metal_kernels.metal
